<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2021 Google Inc. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">FIDO2</string>

    <!-- Username -->
    <eat-comment />
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="sign_in_explanation">For the purpose of demonstration, this app accepts any username.</string>
    <string name="next">Next</string>

    <!-- Auth -->
    <eat-comment />
    <string name="welcome">Welcome, %s!</string>
    <string name="auth_explanation">For the purpose of demonstration, the password you type is ignored.</string>
    <string name="password">Password</string>
    <string name="cancelled">Cancelled</string>
    <string name="auth_error">Error trying to authenticate</string>

    <!-- Home -->
    <eat-comment />
    <string name="credentials_caption">Your registered credentials:</string>
    <string name="empty_credentials">"You don't have any credentials.\nTap '+' to add one."</string>
    <string name="reauth">Reauth</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this credential?\n\n%s</string>
    <string name="credential_error">Error creating credential</string>
    <string name="add_credential">Add credential</string>

</resources>
