<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2021 Google Inc. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.google.android.gms.identity.sample.fido2.ui.home.HomeViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_medium"
                android:gravity="center"
                android:text="@{@string/welcome(viewModel.currentUsername)}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Welcome, John!" />

            <TextView
                android:id="@+id/credentials_caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_medium"
                android:labelFor="@id/credentials"
                android:text="@string/credentials_caption"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/credentials"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingBottom="@dimen/dodge_app_bar"
                android:paddingTop="@dimen/spacing_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/credentials_caption"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/credential_item" />

            <TextView
                android:id="@+id/empty_credentials"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_horizontal"
                android:padding="@dimen/spacing_large"
                android:text="@string/empty_credentials"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/credentials"
                app:layout_constraintEnd_toEndOf="@id/credentials"
                app:layout_constraintStart_toStartOf="@id/credentials"
                app:layout_constraintTop_toTopOf="@id/credentials" />

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/processing"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:backgroundTint="?attr/colorPrimary"
            app:fabAlignmentMode="end"
            app:menu="@menu/home" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_credential"
            app:layout_anchor="@id/app_bar"
            app:srcCompat="@drawable/ic_add" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
